--- a/Villa-Suziriya/Views/Home/Index.cshtml
+++ b/Villa-Suziriya/Views/Home/Index.cshtml
@@ -2,30 +2,83 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+    <div id="myCarousel" class="carousel slide hidden-xs"  data-ride="carousel">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="1"></li>
+            <li data-target="#myCarousel" data-slide-to="2"></li>
+        </ol>
+
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner">
+            <div class="item active">
+                <img src="~/Resources/3.jpg" alt="#">
+            </div>
+
+            <div class="item">
+                <img src="~/Resources/2.jpg" alt="#">
+            </div>
+
+            <div class="item">
+                <img src="~/Resources/1.jpg" alt="#">
+            </div>
+        </div>
+
+        <!-- Left and right controls -->
+        <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#myCarousel" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+            <span class="sr-only">Next</span>
+        </a>
     </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+
+
+<div class="row" style="color:white; margin-top: 20px;">
+    <div class="col-sm-6 col-md-4">
+        <div class="thumbnail">
+            <img src="~/Resources/19-2.jpg" alt="...">
+            <div class="caption">
+                <h3>Ярлык эскиза</h3>
+                <p>
+                    Приватна садиба "СУЗІР*Я" організовує для своїх гостей комплексне триразове харчування(домашня кухня з врахуванням дієти). У щоденний раціон входять  різномантні  салати,перші та другі страви,а також випічка,десерти,напитки та фрукти.
+
+                    Вартість харчування: 200гр. (сніданок,обід,вечеря) з дорослої особи та 150 гр.(сніданок,обід,вечеря) - дитяча порція.
+                </p>
+                <p><a href="#" class="btn btn-primary" role="button">Кнопка</a></p>
+            </div>
+        </div>
     </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+    <div class="col-sm-6 col-md-4">
+        <div class="thumbnail">
+            <img src="~/Resources/19-4.jpg" alt="...">
+            <div class="caption">
+                <h3>Ярлык эскиза</h3>
+                <p>
+                    Приватна садиба "СУЗІР*Я" організовує для своїх гостей комплексне триразове харчування(домашня кухня з врахуванням дієти). У щоденний раціон входять  різномантні  салати,перші та другі страви,а також випічка,десерти,напитки та фрукти.
+
+                    Вартість харчування: 200гр. (сніданок,обід,вечеря) з дорослої особи та 150 гр.(сніданок,обід,вечеря) - дитяча порція.
+                </p>
+                <p><a href="#" class="btn btn-primary" role="button">Кнопка</a> </p>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-6 col-md-4">
+        <div class="thumbnail">
+            <img src="~/Resources/19-32.jpg" alt="...">
+            <div class="caption">
+                <h3>Ярлык эскиза</h3>
+                <p>
+                    Приватна садиба "СУЗІР*Я" організовує для своїх гостей комплексне триразове харчування(домашня кухня з врахуванням дієти). У щоденний раціон входять  різномантні  салати,перші та другі страви,а також випічка,десерти,напитки та фрукти.
+
+                    Вартість харчування: 200гр. (сніданок,обід,вечеря) з дорослої особи та 150 гр.(сніданок,обід,вечеря) - дитяча порція.
+                </p>
+
+            </div>
+        </div>
     </div>
 </div>
